# calculadora-con-errores

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: calculadora.hh  postfijo.hh  shunting_yard.hh  token.hh  tokenizer.hh
src/: CMakeLists.txt  calculadora.cc  main.cc  postfijo.cc  shunting_yard.cc  token.cc  tokenizer.cc
tests/: CMakeLists.txt  calculadora_test.cc  shunting_yard_test.cc  tokenizer_test.cc
